# nyx-taxi-warehouse

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
db/init/: 03_silver_transform.sql  04_gold_mart.sql
db/queries/: 01_total_valid_trips_january_2026.sql  02_revenue_fare_tip_summary.sql  03_peak_trip_date_and_hour.sql  04_weekday_vs_weekend_trip_comparison.sql  05_most_used_payment_type.sql  06_top_pickup_borough_and_zone_by_trip_count.sql  07_top_pickup_zone_by_revenue.sql  08_most_frequent_pickup_to_dropoff_routes.sql  09_time_period_trip_revenue_duration_summary.sql  10_data_quality_issues_by_error_type.sql  11_anomalous_trip_count_by_date.sql  13_top_10_pickup_zones_by_revenue.sql  14_high_pickup_low_average_tip_zones.sql  15_daily_revenue_vs_average.sql  16_trips_above_average_duration_by_zone.sql  17_low_revenue_contribution_pickup_boroughs.sql  18_pickup_zone_revenue_ranking.sql  19_pickup_zone_ranking_per_borough.sql  20_running_total_revenue_by_date.sql  21_seven_day_moving_average_trip_count.sql  22_day_over_day_revenue_comparison.sql  23_top_3_pickup_zones_per_borough.sql  business_analytics.sql
db/schemas/gold/: 01_daily_summary.sql  02_hourly_demand_summary.sql  03_zone_performance_summary.sql  04_payment_behavior_summary.sql  05_route_performance_summary.sql
scripts/: entrypoint.sh  extractor.py  main.py  run_pipeline.sh
scripts/configs/: config.py
scripts/managers/: __init__.py  schema_manager.py
scripts/reporters/: __init__.py  pipeline_reporter.py
utils/: constants.py  helpers.py
(+9 files in other folders)
